// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(Tooltip)
  classes={
    Object {
      "popper": undefined,
      "tooltip": "",
    }
  }
  enterDelay={300}
  placement="top"
  style={
    Object {
      "borderLeftColor": "red",
    }
  }
  title={
    <ForwardRef(StyledComponent)
      data-qa="snap-qa"
    >
      SnapTitle
    </ForwardRef(StyledComponent)>
  }
>
  <span>
    Snappy Text
  </span>
</WithStyles(Tooltip)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(Tooltip)
  classes={
    Object {
      "popper": undefined,
      "tooltip": "",
    }
  }
  enterDelay={300}
  placement="top"
  title={
    <ForwardRef(StyledComponent)>
      SnapTitle
    </ForwardRef(StyledComponent)>
  }
>
  <span>
    Snappy Text
  </span>
</WithStyles(Tooltip)>
`;
